--- a/tamplates/comment/css/comment.css
+++ b/tamplates/comment/css/comment.css
@@ -46,12 +46,19 @@
     height: 48px;
     border-radius: 3px;
     background-color: lightgrey;
+		position: relative;
+		overflow: hidden;
 }
 
 .avatar img {
     display: block;
     width: 100%;
     height: 100%;
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		margin: auto;
 }
 
 .comment-date {
