--- a/templates/comment/index.html
+++ b/templates/comment/index.html
@@ -15,12 +15,11 @@
 <a class="order" href="#">Перейти на официальный сайт</a>
 <section class="comment-block">
   <div class="comment-header">
-    <span class="comment-heading">Comments:</span>
+    <span class="comment-heading">Комментрии:</span>
   </div>
   <div class="comment-main">
     <div class="comment">
-      <div class="avatar">
-        <img src="img/comm1.jpg" alt="">
+      <div class="avatar" style="background: url('img/comm1.jpg')">
       </div>
       <div class="comment-content">
         <div class="comment-info">
@@ -33,8 +32,7 @@
       </div>
     </div>
     <div class="comment ">
-      <div class="avatar">
-        <img src="img/comm2.jpg" alt="">
+      <div class="avatar" style="background: url('img/comm2.jpg')">
       </div>
       <div class="comment-content">
         <div class="comment-info">
@@ -48,8 +46,7 @@
     </div>
 
     <div class="comment">
-      <div class="avatar">
-        <img src="img/comm3.jpg" alt="">
+      <div class="avatar" style="background: url('img/comm3.jpg')">
       </div>
       <div class="comment-content">
         <div class="comment-info">
@@ -63,8 +60,7 @@
     </div>
 
     <div class="comment">
-      <div class="avatar">
-        <img src="img/comm4.jpg" alt="">
+      <div class="avatar" style="background: url('img/comm4.jpg')">
       </div>
       <div class="comment-content">
         <div class="comment-info">
@@ -78,8 +74,7 @@
     </div>
 
     <div class="comment">
-      <div class="avatar">
-        <img src="img/comm5.jpg" alt="">
+      <div class="avatar" style="background: url('img/comm5.jpg')">
       </div>
       <div class="comment-content">
         <div class="comment-info">
@@ -93,8 +88,7 @@
     </div>
 
     <div class="comment">
-      <div class="avatar">
-        <img src="img/comm6.jpg" alt="">
+      <div class="avatar" style="background: url('img/comm6.jpg')">
       </div>
       <div class="comment-content">
         <div class="comment-info">
@@ -108,8 +102,7 @@
     </div>
 
     <div class="comment">
-      <div class="avatar">
-        <img src="img/comm7.jpg" alt="">
+      <div class="avatar" style="background: url('img/comm7.jpg')">
       </div>
       <div class="comment-content">
         <div class="comment-info">
@@ -123,8 +116,7 @@
     </div>
 
     <div class="comment">
-      <div class="avatar">
-        <img src="img/comm8.jpg" alt="">
+      <div class="avatar" style="background: url('img/comm8.jpg')">
       </div>
       <div class="comment-content">
         <div class="comment-info">
@@ -138,8 +130,7 @@
     </div>
 
     <div class="comment">
-      <div class="avatar">
-        <img src="img/comm9.jpg" alt="">
+      <div class="avatar" style="background: url('img/comm9.jpg')">
       </div>
       <div class="comment-content">
         <div class="comment-info">
@@ -153,8 +144,7 @@
     </div>
 
     <div class="comment">
-      <div class="avatar">
-        <img src="img/comm10.jpg" alt="">
+      <div class="avatar" style="background: url('img/comm10.jpg')">
       </div>
       <div class="comment-content">
         <div class="comment-info">
