--- a/templates/comment/css/comment.css
+++ b/templates/comment/css/comment.css
@@ -49,6 +49,9 @@
 		background-color: lightgrey;
 		position: relative;
 		overflow: hidden;
+		background-repeat: no-repeat;
+		background-size: cover;
+		background-position: center;
 }
 
 .comment-date {
