--- a/templates/comment/index.html
+++ b/templates/comment/index.html
@@ -19,7 +19,7 @@
   </div>
   <div class="comment-main">
     <div class="comment">
-      <div class="avatar" style="background: url('img/comm1.jpg')">
+      <div class="avatar" style="background-image: url('img/comm1.jpg')">
       </div>
       <div class="comment-content">
         <div class="comment-info">
@@ -32,7 +32,7 @@
       </div>
     </div>
     <div class="comment ">
-      <div class="avatar" style="background: url('img/comm2.jpg')">
+      <div class="avatar" style="background-image: url('img/comm2.jpg')">
       </div>
       <div class="comment-content">
         <div class="comment-info">
@@ -46,7 +46,7 @@
     </div>
 
     <div class="comment">
-      <div class="avatar" style="background: url('img/comm3.jpg')">
+      <div class="avatar" style="background-image: url('img/comm3.jpg')">
       </div>
       <div class="comment-content">
         <div class="comment-info">
@@ -60,7 +60,7 @@
     </div>
 
     <div class="comment">
-      <div class="avatar" style="background: url('img/comm4.jpg')">
+      <div class="avatar" style="background-image: url('img/comm4.jpg')">
       </div>
       <div class="comment-content">
         <div class="comment-info">
@@ -74,7 +74,7 @@
     </div>
 
     <div class="comment">
-      <div class="avatar" style="background: url('img/comm5.jpg')">
+      <div class="avatar" style="background-image: url('img/comm5.jpg')">
       </div>
       <div class="comment-content">
         <div class="comment-info">
@@ -88,7 +88,7 @@
     </div>
 
     <div class="comment">
-      <div class="avatar" style="background: url('img/comm6.jpg')">
+      <div class="avatar" style="background-image: url('img/comm6.jpg')">
       </div>
       <div class="comment-content">
         <div class="comment-info">
@@ -102,7 +102,7 @@
     </div>
 
     <div class="comment">
-      <div class="avatar" style="background: url('img/comm7.jpg')">
+      <div class="avatar" style="background-image: url('img/comm7.jpg')">
       </div>
       <div class="comment-content">
         <div class="comment-info">
@@ -116,7 +116,7 @@
     </div>
 
     <div class="comment">
-      <div class="avatar" style="background: url('img/comm8.jpg')">
+      <div class="avatar" style="background-image: url('img/comm8.jpg')">
       </div>
       <div class="comment-content">
         <div class="comment-info">
@@ -130,7 +130,7 @@
     </div>
 
     <div class="comment">
-      <div class="avatar" style="background: url('img/comm9.jpg')">
+      <div class="avatar" style="background-image: url('img/comm9.jpg')">
       </div>
       <div class="comment-content">
         <div class="comment-info">
@@ -144,7 +144,7 @@
     </div>
 
     <div class="comment">
-      <div class="avatar" style="background: url('img/comm10.jpg')">
+      <div class="avatar" style="background-image: url('img/comm10.jpg')">
       </div>
       <div class="comment-content">
         <div class="comment-info">
