--- a/templates/alarm/index.html
+++ b/templates/alarm/index.html
@@ -9,16 +9,15 @@
 </head>
 <body>
 <section class="alarm">
-	<div class="alarm-wrap">
-		<div class="alarm-left">
-			<h3 class="alarm-title">ПОЖАЛУЙСТА,
+	<div class="alarm__container">
+		<div class="alarm__left">
+			<h3 class="alarm__title">ПОЖАЛУЙСТА,
 				<br>
 				ОБРАТИТЕ ВНИМАНИЕ!
 			</h3>
 		</div>
-		<div class="alarm-right">
-			<p class="alarm-text">Количество упаковок <b>ПРОДУКТ</b>, необходимое для желаемого результата,
-				<span class="text-bold">определяется индивидуально и в отдельных случаях может увеличиться.</span></p>
+		<div class="alarm__right">
+			<p class="alarm__text">Количество упаковок <b>ПРОДУКТ</b>, необходимое для желаемого результата, <b>определяется индивидуально и в отдельных случаях может увеличиться.</b></p>
 		</div>
 	</div>
 </section>
