--- a/templates/alarm/css/style.css
+++ b/templates/alarm/css/style.css
@@ -43,6 +43,7 @@
 
 .alarm__title {
 		font-size: 16px;
+		line-height: 1.3;
 		font-weight: 700;
 		color: #000;
 		text-transform: uppercase;
@@ -58,6 +59,7 @@
 
 .alarm__text {
 		font-size: 16px;
+		line-height: 1.3;
 		color: #000;
 		margin: 0;
 }
